--- a/index.html
+++ b/index.html
@@ -42,23 +42,24 @@
 
     <!-- Cards -->
      <div class="cards">
-        <img src="/images/Frame 6.png" alt="">
-        <img src="/images/Frame 5.png" alt="" class="big">
-        <img src="/images/Frame 8.png" alt="">
-        <img src="/images/Frame 7.png" alt="" class="big">
+        <img src="./images/Frame 6.png" alt="">
+        <img src="./images/Frame 5.png" alt="" class="big">
+        <img src="./images/Frame 8.png" alt="">
+        <img src="./images/Frame 7.png" alt="" class="big">
      </div>
 
      <!-- Icons -->
       <div class="logos">
-        <img src="/images/Google Logo.png" alt="">
-        <img src="/images/Airbnb Logo.png" alt="">
-        <img src="/images/Samsung Logo.png" alt="">
-        <img src="/images/image 21.png" alt="">
-        <img src="/images/image 19.png" alt="">
+        <img src="./images/Google Logo.png" alt="">
+        <img src="./images/Airbnb Logo.png" alt="">
+        <img src="./images/Samsung Logo.png" alt="">
+        <img src="./images/image 21.png" alt="">
+        <img src="./images/image 19.png" alt="">
       </div>
 
 
       <a href="#top"><p>hello</p></a>
       
 </body>
+
 </html>
