--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header id="top">
         <!-- <div class="wrapper"> -->
+             <input type="checkbox" name="" id="toggle-btn">
             <nav>
                 <h1>Furnique</h1>
                 <ul class="nav-menu">
@@ -20,6 +21,7 @@
                 <ul class="nav-icons">
                     <li>icon 1</li>
                     <li>icon 2</li>
+                    <label for="toggle-btn">A</label>
                 </ul>
             </nav>
         <!-- </div> -->
@@ -63,3 +65,4 @@
 </body>
 
 </html>
+
